--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,6 @@
 .footer-container {
     background-color: #051b32;
     width: 100%;
-    
 }
 
 .footer-container p {
@@ -30,6 +29,10 @@
     color: rgb(67, 131, 216);
     text-decoration: none;
     font-weight: 00;
+}
+
+.footer-container a:hover {
+    color: rgb(85, 157, 250);
 }
 
 .footer-content {
@@ -75,7 +78,6 @@
 }
 
 .footer-container .footer-left .social-icon:hover {
-    margin: 5px;
     opacity: .5
 }
 
@@ -99,10 +101,12 @@
     padding-left: 12%;
     padding-bottom: 20px;
 }
-.footer-container .copy-container hr{
+
+.footer-container .copy-container hr {
     border: .25px solid #FFF;
     margin-right: 30%;
-  }
+}
+
 .footer-container .copy-container p {
     font-size: 10px;
     line-height: 1.5;
