--- a/src/components/About/BoardLeft/BoardLeft.css
+++ b/src/components/About/BoardLeft/BoardLeft.css
@@ -11,14 +11,25 @@
 
 .board-left-info {
     height: fit-content;
-    width: 600px;
+    width: fit-content;
     grid-column: 1;
     flex-direction: row;
-    padding: 60px 0;
+    padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 100px;
+    background-color: rgba(211, 211, 211, 0.315);
+    border-radius: 25px;
+    margin-right: 1rem;
+}
+
+@media screen and (max-width: 568px) {
+    .board-left-info {
+        margin-bottom: none;
+        margin-right: none;
+        margin: 1rem;
+    }
 }
 
 .board-left-info .left-bio {
