--- a/src/components/About/BoardRight/BoardRight.css
+++ b/src/components/About/BoardRight/BoardRight.css
@@ -11,18 +11,31 @@
 
 .board-right-info {
     height: fit-content;
-    width: 600px;
+    width: fit-content;
     flex-direction: row;
-    padding: 60px 0;
+    padding: 1rem;
     grid-column: 2;
     display: flex;
     margin-top: 150px;
     justify-content: center;
     align-items: center;
+    background-color: rgba(211, 211, 211, 0.315);
+    border-radius: 25px;
+    margin-left: 1rem;
 }
 
 .board-right-info .right-bio {
     color: grey;
     font-size: 14px;
     width: 200px
+}
+
+@media screen and (max-width:568px) {
+    .board-right-info {
+        grid-column: 1;
+        margin-top: none;
+        margin-left: none;
+        margin: 1rem;
+        margin-left: none;
+    }
 }
