Add extra styling on hover

--- a/src/components/StartupCard/StartupCard.css
+++ b/src/components/StartupCard/StartupCard.css
@@ -9,8 +9,8 @@
     margin: .5rem;
 }
 
-.startup-card-container :hover {
-    /* box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); */
+.startup-card-container:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .startup-card-container .header {
@@ -45,6 +45,10 @@
     border: none;
     outline: none;
     color: white;
+}
+
+.startup-card-btn:hover {
+    opacity: .8;
 }
 
 .logo-circle {
