added startup cards

--- a/src/components/StartupCard/StartupCard.css
+++ b/src/components/StartupCard/StartupCard.css
@@ -40,8 +40,8 @@
     background-color: #1E90FF;
     height: 25px;
     width: 75px;
-    margin-left: 20px;
     border-radius: 12px;
+    margin-left: 20px;
     border: none;
     outline: none;
     color: white;
@@ -64,4 +64,5 @@
 .startup-logo {
     height: 50px;
     width: 50px;
+    border-radius: 50%;
 }
