--- a/src/components/StartupCard/StartupCard.css
+++ b/src/components/StartupCard/StartupCard.css
@@ -1,6 +1,8 @@
 .startup-card-container {
     height: fit-content;
-    width: 450px;
+    justify-self: center;
+    align-self: center;
+    width: 400px;
     text-align: center;
     color: white;
     display: grid;
@@ -15,7 +17,7 @@
 
 .startup-card-container .header {
     width: 100%;
-    height: 125px;
+    height: fit-content;
     background-color: whitesmoke;
     grid-column: 1;
     grid-row: 1;
@@ -28,12 +30,10 @@
 .startup-card-container .footer {
     width: 100%;
     height: fit-content;
-    min-height: 125px;
     background-color: #00356B;
     grid-row: 2;
     grid-column: 1;
     border-radius: 0px 0px 12px 12px;
-    position: relative;
 }
 
 .startup-card-btn {
@@ -51,22 +51,23 @@
     opacity: .8;
 }
 
-.logo-circle {
-    height: 50px;
-    width: 50px;
-}
-
 .startup-card-container .button-container {
     text-align: right;
     margin-left: 20px;
     margin-right: 20px;
-    position: absolute;
+    margin-bottom: 10px;
     bottom: 10px;
     right: 25px;
 }
 
+.startup-writeup {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
 .startup-logo {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
+    height: 80px;
+    width: 80px;
+    border-radius: 12px;
+    object-fit: contain;
 }
