--- a/src/views/Startups/Startups.css
+++ b/src/views/Startups/Startups.css
@@ -10,3 +10,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 568px){
+    .startups-body{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
