--- a/src/views/App.css
+++ b/src/views/App.css
@@ -4,6 +4,6 @@
 }
 
 .App {
-    font-family: "futura-pt", "Segoe UI", "LottePaperFang";
+    font-family: "futura-pt", "Segoe UI";
     text-align: center;
 }
