--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
     font-weight: normal;
 }
 
+@font-face {
+    font-family: 'Cocogoose';
+    src: local('Cocogoose'), url(./Fonts/cocogoose/CocogooseUltralight.ttf) format('truetype');
+    font-weight: normal;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
