--- a/src/views/Startups/Startups.css
+++ b/src/views/Startups/Startups.css
@@ -3,6 +3,10 @@
     color: #00356B;
 }
 
+.startups h2 .replace-s {
+    font-family: "Cocogoose";
+}
+
 .startups-body {
     background-color: white;
     display: grid;
@@ -13,6 +17,12 @@
 
 .startup-illustration {
     width: 60vw;
+}
+
+.startups-hype {
+    font-weight: bold;
+    margin-left: 20vw;
+    margin-right: 20vw;
 }
 
 @media screen and (max-width: 568px) {
