--- a/src/components/About/BoardRight/BoardRight.css
+++ b/src/components/About/BoardRight/BoardRight.css
@@ -31,6 +31,34 @@
     width: 200px
 }
 
+.board-right-info .right-bio .name {
+    color: black;
+    font-weight: bold;
+}
+
+.board-right-info .right-bio .divider {
+    margin-left: 3rem;
+    margin-right: 3rem;
+    height: 2px;
+    background-color: #00356B;
+    border: solid 1px #00356B;
+}
+
+.linkedin-btn {
+    background-color: #00356B;
+    height: 25px;
+    width: 75px;
+    margin-top: .5rem;
+    border-radius: 12px;
+    border: none;
+    outline: none;
+    color: white;
+}
+
+.linkedin-btn:hover {
+    opacity: .8;
+}
+
 @media screen and (max-width:568px) {
     .board-right-info {
         grid-column: 1;
