--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,23 +22,27 @@
 }
 
 .directory {
-    display: grid;
+    /* display: grid; */
+    display: none;
     margin: 2rem;
 }
 
 .directory hr {
     width: 50px;
+    display: none;
 }
 
 .for-founders {
     grid-column: 1;
     grid-row: 1;
+    display: none;
     font-weight: bold;
 }
 
 .for-alum {
     grid-column: 2;
     grid-row: 1;
+    display: none;
     font-weight: bold;
 }
 
@@ -48,6 +52,7 @@
     text-align: center;
     border-radius: 12px;
     padding: 1rem;
+    display: none;
     font-weight: bold;
     outline: none;
     border: none;
@@ -56,6 +61,7 @@
 
 .directory-btn:hover {
     box-shadow: 2px 2px 5px rgba(98, 95, 131, 0.627);
+    display: none;
 }
 
 .ww-do {
@@ -68,6 +74,7 @@
 .leaders {
     display: grid;
     justify-content: center;
+    align-items: start;
     grid-template-columns: repeat(3, 1fr);
     margin-left: 25vw;
     margin-right: 25vw;
