--- a/src/components/About/Leaders/Leaders.css
+++ b/src/components/About/Leaders/Leaders.css
@@ -12,8 +12,25 @@
 .leader-info {
     height: fit-content;
     width: 200px;
-    align-self: center;
+    align-self: flex-start;
     justify-self: center;
+}
+
+.leader-info .name {
+    font-weight: bold;
+}
+
+.leader-info .divider {
+    margin-left: 3rem;
+    margin-right: 3rem;
+    height: 3px;
+    background-color: #00356B;
+    border: solid 2px #00356B;
+}
+
+.leader-info .role {
+    font-weight: normal;
+    font-size: 12px;
 }
 
 .leader-info .bio {
