--- a/src/components/VC/VCLeft/VCLeft.css
+++ b/src/components/VC/VCLeft/VCLeft.css
@@ -25,16 +25,29 @@
     margin-right: 1rem;
 }
 
+.vc-left-info .left-bio {
+    color: grey;
+    font-size: 14px;
+    width: 200px;
+}
+
+.vc-left-info .left-bio .divider {
+    margin-left: 3rem;
+    margin-right: 3rem;
+    height: 2px;
+    background-color: #00356B;
+    border: solid 1px #00356B;
+}
+
+.vc-left-info .left-bio .name {
+    color: black;
+    font-weight: bold;
+}
+
 @media screen and (max-width: 568px) {
     .vc-left-info {
         margin-bottom: none;
         margin-right: none;
         margin: 1rem;
     }
-}
-
-.vc-left-info .left-bio {
-    color: grey;
-    font-size: 14px;
-    width: 200px;
 }
