--- a/src/components/Header/BurgerMenu/BurgerMenu.css
+++ b/src/components/Header/BurgerMenu/BurgerMenu.css
@@ -1,97 +1,114 @@
-.NavbarItems {
-    background-color: #00356B;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2 rem;
+/* Position and sizing of burger button */
+
+.bm-burger-button {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: calc(100vw - 50px);
+    top: 36px;
 }
 
-.navbar-logo {
-    color: #fff;
-    justify-self: start;
-    margin-left: 15px;
-    cursor: pointer;
+
+/* Color/shape of burger icon bars */
+
+.bm-burger-bars {
+    background: white;
 }
 
-.nav-menu {
-    display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px;
-    list-style: none;
-    width: 70vw;
+.menu-item {
+    background-color: white;
+    width: 100%;
+    height: fit-content;
+    padding: 1rem;
+    margin: .5rem;
+    border-radius: 12px;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.menu-item:hover,
+.menu-item:focus {
+    outline: none;
+    background: #00AFEA;
+    color: white;
+}
+
+
+/* Color/shape of burger icon bars on hover*/
+
+.bm-burger-bars-hover {
+    background: white;
+}
+
+
+/* Position and sizing of clickable cross button */
+
+.bm-cross-button {
+    height: 24px;
+    width: 24px;
+}
+
+
+/* Color/shape of close button cross */
+
+.bm-cross {
+    background: #bdc3c7;
+}
+
+
+/*
+  Sidebar wrapper styles
+  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+  */
+
+.bm-menu-wrap {
+    position: fixed;
+    height: 100%;
+}
+
+
+/* General sidebar styles */
+
+.bm-menu {
+    background: #E5EAF3;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+}
+
+
+/* Morph shape necessary with bubble or elastic */
+
+.bm-morph-shape {
+    fill: white;
+}
+
+
+/* Wrapper for item list */
+
+.bm-item-list {
+    color: #b8b7ad;
+    padding: 0.8em;
     text-align: center;
-    justify-content: end;
-    margin-right: 2rem;
 }
 
 
-.fa-bars {
-    color: #fff;
+/* Individual item */
+
+.bm-item {
+    display: inline-block;
+    color: #373a47;
+    text-align: center;
 }
 
-.menu-icon {
-    display: none;
+.bm-item:hover,
+.bm-item:focus {
+    outline: none;
 }
 
-@media screen and (max-width: 568px) {
-    .NavbarItems {
-        position: relative;
-    }
 
-    .nav-menu {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 500px;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-    }
+/* Styling of overlay */
 
-    .nav-menu.active {
-        background: #00356B;
-        left: 0;
-        opacity: 1;
-        transition: all 0.5s ease;
-        z-index: 1;
-    }
-
-    .nav-links {
-        text-align: center;
-        padding: 2rem;
-        width: 100%;
-        display: table;
-    }
-
-    .nav-links:hover {
-        background-color: #a9a9a9;
-        border-radius: 0;
-    }
-
-    .navbar-logo {
-        position: absolute;
-        top: 0;
-        left: 0;
-        transform: translate(25%, 50%);
-    }
-
-    .menu-icon {
-        display: block;
-        position: absolute;
-        transform: translate(-100%, 60%);
-        top: 0;
-        right: 0;
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-
-    .fa-times {
-        color: #fff;
-        font-size: 2rem;
-
-    }
-
+.bm-overlay {
+    background: white;
 }
