--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,15 @@
     font-weight: normal;
 }
 
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans'), url(./Fonts/OpenSans-Regular.ttf) format('truetype');
+    font-weight: normal;
+}
+
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'sans-serif', 'Open Sans';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
