css color changes; made header+footer into func. comp.

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,5 @@
 .about h2 {
-    color: #00356B;
+    color: #051B33;
     font-family: 'LottePaperFang';
 }
 
@@ -47,7 +47,7 @@
 }
 
 .directory-btn {
-    background-color: #00356B;
+    background-color: #051B33;
     color: white;
     text-align: center;
     border-radius: 12px;
