--- a/src/components/Header/Navbar/Navbar.css
+++ b/src/components/Header/Navbar/Navbar.css
@@ -46,13 +46,13 @@
     .nav-link {
         padding: 8px 1vw;
         text-decoration: none;
-        color: #00AFEA;
+        color: #328EF6;
         grid-row: 1;
     }
     .nav-link {
         padding: 8px 1vw;
         text-decoration: none;
-        color: #00AFEA;
+        color: #328EF6;
         border-right: 1px solid #ccc;
     }
     #last-nav-link {
