--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -27,13 +27,13 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 18px;
     line-height: 1.5;
-    color: rgb(67, 131, 216);
+    color: #328EF6;
     text-decoration: none;
     font-weight: 00;
 }
 
 .footer-container a:hover {
-    color: rgb(85, 157, 250);
+    color: #0E4D92;
 }
 
 .footer-content {
