--- a/src/components/StartupCard/StartupCard.css
+++ b/src/components/StartupCard/StartupCard.css
@@ -18,26 +18,26 @@
 .startup-card-container .header {
     width: 100%;
     height: fit-content;
-    background-color: whitesmoke;
+    background-color: white;
     grid-column: 1;
     grid-row: 1;
     border-radius: 12px 12px 0px 0px;
     font-size: 16px;
     font-weight: bold;
-    color: black;
+    color: #051B33;
 }
 
 .startup-card-container .footer {
     width: 100%;
     height: fit-content;
-    background-color: #00356B;
+    background-color: #0E4D92;
     grid-row: 2;
     grid-column: 1;
     border-radius: 0px 0px 12px 12px;
 }
 
 .startup-card-btn {
-    background-color: #1E90FF;
+    background-color: #328EF6;
     height: 25px;
     width: 75px;
     border-radius: 12px;
