--- a/src/views/Startups/Startups.css
+++ b/src/views/Startups/Startups.css
@@ -1,10 +1,10 @@
 .startups h2 {
-    font-family: "LottePaperFang";
-    color: #00356B;
+    font-family: "futura";
+    color: #051B33;
 }
 
 .startups h2 .replace-s {
-    font-family: "Cocogoose";
+    font-family: "futura";
     font-size: 1.2em;
 }
 
