Add futura font

--- a/src/views/Startups/Startups.css
+++ b/src/views/Startups/Startups.css
@@ -1,10 +1,10 @@
 .startups h2 {
-    font-family: "futura";
+    font-family: "LottePaperFang";
     color: #051B33;
 }
 
 .startups h2 .replace-s {
-    font-family: "futura";
+    font-family: "Cocogoose";
     font-size: 1.2em;
 }
 
