--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,12 @@
     font-weight: normal;
 }
 
+@font-face {
+    font-family: 'Futura';
+    src: local('Futura'), url(./Fonts/Futura-Book.ttf) format('truetype');
+    font-weight: normal;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'sans-serif', 'Open Sans';
