Add accel golf and make startup website optional

--- a/src/components/StartupCard/StartupCard.css
+++ b/src/components/StartupCard/StartupCard.css
@@ -82,4 +82,8 @@
         margin-left: none;
         margin-right: none;
     }
+    #noweb {
+        text-align: right;
+        padding-right: .5rem;
+    }
 }
