--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,9 @@ header {}
 
 #navbar {}
 
-#burger-menu {}
+#burger-menu {
+    display: none;
+}
 
 #tag-line {}
 
@@ -22,7 +24,13 @@ header {}
         grid-row: 1;
         padding: .5rem;
         padding-left: none;
-        height: 15vmin;
+        height: 12vmin;
+        padding-top: 7vmin;
+        text-decoration: none;
+        color: white
+    }
+    #burger-menu {
+        display: none;
     }
     #navbar {
         display: none;
@@ -42,16 +50,20 @@ header {}
     .logo {
         grid-row: 1;
         padding: .5rem;
-        margin-bottom: .5rem;
-        height: 10vmin;
+        margin-top: 2vmin;
+        margin-bottom: 2vmin;
         justify-self: start;
+        align-self: center;
+        text-decoration: none;
+        color: white
     }
     #navbar {
-        grid-row: 1;
+        /* grid-row: 1;
         justify-content: center;
         justify-self: end;
         vertical-align: middle;
-        margin-right: 2rem;
+        margin-right: 2rem; */
+        display: none;
     }
     #burger-menu {
         display: none;
