Add change to header logo mobile padding

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,7 +23,7 @@ header {}
     .logo {
         grid-row: 1;
         padding: .5rem;
-        padding-left: none;
+        padding-left: 0;
         height: 12vmin;
         padding-top: 7vmin;
         text-decoration: none;
